--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
         "react-div-100vh": "^0.7.0",
         "react-dom": "18.2.0",
         "react-h5-audio-player": "^3.8.6",
+        "sharp": "^0.30.0",
         "typescript": "4.8.4"
     },
     "devDependencies": {
