--- a/images/package.json
+++ b/images/package.json
@@ -9,6 +9,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@gumlet/gif-resize": "^1.3.1",
         "@sanity/client": "^3.4.1",
         "request": "^2.88.2",
         "sharp": "^0.30.0"
