--- a/images/package.json
+++ b/images/package.json
@@ -6,6 +6,9 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
+    "engines": {
+        "node": "v22.11.0"
+    },
     "author": "",
     "license": "ISC",
     "dependencies": {
