--- a/cms/package.json
+++ b/cms/package.json
@@ -11,7 +11,8 @@
     },
     "scripts": {
         "start": "sanity start",
-        "build": "sanity build"
+        "build": "sanity build",
+        "deploy": "sanity deploy"
     },
     "keywords": [
         "sanity"
